--- a/src/App.css
+++ b/src/App.css
@@ -7,15 +7,13 @@
   grid-area: header;
   background-color: darkseagreen;
   width: 100%;
-  padding: 1rem .5rem 1rem .5rem;
-  margin: 0 auto;
+  padding: .5rem;
 }
 
 .new__thread {
   background-color: #6e9afa;
   color: white;
   padding: 0.5rem 1rem;
-  border: none;
   border-radius: 0.375rem;
   cursor: pointer;
   transition: background-color 0.2s;
@@ -23,4 +21,33 @@
 
 .new__thread:hover {
   background-color: #1760ff;
+}
+
+.threads {
+  min-width: 80%;
+  height: max-content;
+  background-color: rgb(222, 252, 252);
+  display: grid;
+  justify-content: center;
+  place-content: center;
+  place-items: center;
+  grid-template-columns: 1fr;
+  text-align: center;
+  padding: .5rem;
+  margin: 0 auto;
+}
+
+.threads__list {
+  display: inline;
+  margin: 0px;
+  padding: 0px
+}
+
+.threads__element {
+  display: inline grid;
+  border: .1rem solid;
+  list-style-type: none;
+  min-width: 60%;
+  padding: .5rem;
+  margin: 0;
 }
