--- a/src/index.css
+++ b/src/index.css
@@ -11,8 +11,7 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-
-  max-width: 400vh;
+  width: 100%;
 }
 
 a {
