--- a/src/App.css
+++ b/src/App.css
@@ -158,6 +158,7 @@
 
 .threads__list {
   display: inline;
+  min-height: 100vh;
   margin: 0px;
   padding: 0px
 }
@@ -190,6 +191,7 @@
 
 .posts__list {
   display: inline;
+  min-height: 100vh;
   margin: 0px;
   padding: 0px;
 }
