--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@
 .new__thread {
   display: flex;
   align-items: center;
-  background-color: #6e9afa;
+  background-color: #0a3d62;
   color: white;
   padding: 1rem .5rem;
   border-radius: 0.375rem;
